After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731541 - minor introspection fixes
minor introspection fixes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other Linux
: Normal normal
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-12 00:04 UTC by Evan Nemerson
Modified: 2014-06-12 08:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
introspection: minor annotation additions (2.40 KB, patch)
2014-06-12 00:04 UTC, Evan Nemerson
committed Details | Review

Description Evan Nemerson 2014-06-12 00:04:35 UTC
Created attachment 278297 [details] [review]
introspection: minor annotation additions

A few small annotation additions.
Comment 1 Tim-Philipp Müller 2014-06-12 08:49:03 UTC
Thanks, pushed:

 commit 2a14482c6237ba2b3513560a3211e6dc0f6a4dc8
 Author: Evan Nemerson <evan@nemerson.com>
 Date:   Wed Jun 11 16:28:51 2014 -0700

    introspection: minor annotation additions
    
    https://bugzilla.gnome.org/show_bug.cgi?id=731541