introspection: minor annotation additions

https://bugzilla.gnome.org/show_bug.cgi?id=731541