gst/gstdevice.c
@@ -264,8 +264,8 @@ gst_device_reconfigure_element (GstDevice * device, GstElement * element)
 /**
  * gst_device_has_classesv:
  * @device: a #GstDevice
- * @classes: a %NULL terminated array of klasses to match, only match if all
- *  classes are matched
+ * @classes: (array zero-terminated=1): a %NULL terminated array of klasses to match, only match if all
+ *   classes are matched
  *
  * Check if @factory matches all of the given classes
  *
